--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
 <style>
   body {
     margin: 0;
+    padding: 0;
+    height: 100%;
     color: rgba(0, 0, 0, 0.65);
     font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC,
