--- a/h5-server/public/preview.html
+++ b/h5-server/public/preview.html
@@ -14,55 +14,17 @@
       body {
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           "Helvetica Neue", Arial, sans-serif;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        background: #f5f5f5;
         min-height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 20px;
-      }
-
-      .preview-wrapper {
-        background: white;
-        border-radius: 16px;
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-        overflow: hidden;
-        max-width: 400px;
-        width: 100%;
-      }
-
-      .preview-header {
-        background: linear-gradient(45deg, #667eea, #764ba2);
-        color: white;
-        padding: 16px 20px;
-        text-align: center;
-      }
-
-      .preview-title {
-        font-size: 18px;
-        font-weight: 600;
-        margin-bottom: 4px;
-      }
-
-      .preview-subtitle {
-        font-size: 14px;
-        opacity: 0.9;
-      }
-
-      .canvas-container {
-        position: relative;
-        background: #f8f9fa;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 20px;
       }
 
       .canvas-area {
         position: relative;
         width: 375px;
         background: white;
-        border-radius: 8px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         overflow: hidden;
       }
@@ -83,19 +45,6 @@
         max-width: 100%;
         height: auto;
         display: block;
-      }
-
-      .preview-footer {
-        padding: 20px;
-        background: #f8f9fa;
-        border-top: 1px solid #e9ecef;
-      }
-
-      .preview-desc {
-        font-size: 14px;
-        color: #6c757d;
-        line-height: 1.6;
-        text-align: center;
       }
 
       .loading {
@@ -149,39 +98,27 @@
     </style>
   </head>
   <body>
-    <div class="preview-wrapper">
-      <div class="preview-header">
-        <div class="preview-title">海报预览</div>
-        <div class="preview-subtitle">Poster Preview</div>
-      </div>
+    <div id="loading" class="loading">
+      <div class="loading-spinner"></div>
+      <div>正在加载...</div>
+    </div>
 
-      <div class="canvas-container">
-        <div id="loading" class="loading">
-          <div class="loading-spinner"></div>
-          <div>正在加载...</div>
-        </div>
+    <div id="error" class="error" style="display: none">
+      <div class="error-icon">⚠️</div>
+      <div class="error-message">加载失败</div>
+      <div class="error-detail">请检查网络连接或稍后重试</div>
+    </div>
 
-        <div id="error" class="error" style="display: none">
-          <div class="error-icon">⚠️</div>
-          <div class="error-message">加载失败</div>
-          <div class="error-detail">请检查网络连接或稍后重试</div>
-        </div>
-
-        <div id="canvas-area" class="canvas-area" style="display: none">
-          <!-- 组件内容将在这里动态生成 -->
-        </div>
-      </div>
-
-      <div class="preview-footer">
-        <div id="preview-desc" class="preview-desc">正在加载作品信息...</div>
-      </div>
+    <div id="canvas-area" class="canvas-area" style="display: none">
+      <!-- 组件内容将在这里动态生成 -->
     </div>
 
     <script>
       // 从URL获取作品ID和UUID
       function getWorkInfoFromURL() {
         const path = window.location.pathname;
-        const match = path.match(/\/p\/(\d+)-(.+)/);
+        // 支持 /p/preview/:workId-:uuid 格式
+        const match = path.match(/\/p\/preview\/(\d+)-(.+)/);
         if (match) {
           return {
             workId: match[1],
@@ -216,14 +153,8 @@
 
       // 渲染作品
       function renderWork(workData) {
-        const { title, desc, content } = workData;
+        const { content } = workData;
         const { components = [], props = {} } = content || {};
-
-        // 更新标题和描述
-        document.querySelector(".preview-title").textContent =
-          title || "未命名作品";
-        document.querySelector("#preview-desc").textContent =
-          desc || "暂无描述";
 
         // 设置canvas区域样式
         const canvasArea = document.getElementById("canvas-area");
